<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/menu_top_nav"
        android:checkableBehavior="single" >
        <item android:id="@+id/fragment_home"
            android:title="@string/home_fragment"
            android:icon="@drawable/ic_home"
            app:showAsAction="always"/>
        <item android:id="@+id/fragment_exercise"
            android:title="@string/exercise_fragment"
            android:icon="@drawable/ic_muscles"
            app:showAsAction="always"/>
        <item android:id="@+id/fragment_statistic"
            android:title="@string/statistic_fragment"
            android:icon="@drawable/ic_statistic"
            app:showAsAction="always"/>
    </group>
    <item android:id="@+id/fragment_setting"
        android:title="@string/setting_fragment"
        android:icon="@drawable/ic_settings"
        app:showAsAction="always"/>
</menu>