<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragment_home">

    <fragment
        android:id="@+id/fragment_home"
        android:name="com.example.luyentap.Fragments.HomeFragment"
        android:label="@string/home_fragment"
        tools:layout="@layout/fragment_home"/>
    <fragment
        android:id="@+id/fragment_statistic"
        android:name="com.example.luyentap.Fragments.StatisticFragment"
        android:label="@string/statistic_fragment"
        tools:layout="@layout/fragment_statistic"/>
    <fragment
        android:id="@+id/fragment_setting"
        android:name="com.example.luyentap.Fragments.SettingFragment"
        android:label="@string/setting_fragment"
        tools:layout="@layout/fragment_setting"/>
    <fragment
        android:id="@+id/fragment_exercise"
        android:name="com.example.luyentap.Fragments.ExerciseFragment"
        android:label="@string/exercise_fragment"
        tools:layout="@layout/fragment_exercise"/>
</navigation>