<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_opera_train"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:text="@string/has_ex"
        android:textSize="18sp"
        android:singleLine="false"
        android:textColor="@color/black"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/tv_ex_train"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:text=""
        android:textSize="16sp"
        android:singleLine="false"

        app:layout_constraintTop_toBottomOf="@id/tv_opera_train"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="4dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/tv_status_train"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:text="@string/completed_ex"
        android:textSize="20sp"
        android:singleLine="false"
        android:textColor="@color/red_700"

        app:layout_constraintTop_toBottomOf="@id/tv_ex_train"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="20dp"/>

    <Button
        android:id="@+id/btn_complete_train"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete_button"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginBottom="150dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>